--- a/July16_Speech_CompleteV.ipynb
+++ b/July16_Speech_CompleteV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNlk3zXWn33TpDgC3LSd8o+",
+      "authorship_tag": "ABX9TyPTA98zZClunT+dzj8wSrJ2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -690,6 +690,170 @@
           "execution_count": 2
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ============================================================================\n",
+        "# STEP 3: LIGHT PREPROCESSING\n",
+        "# ============================================================================\n",
+        "\n",
+        "class AudioPreprocessor:\n",
+        "    def __init__(self, target_sr=16000, normalize=True):\n",
+        "        self.target_sr = target_sr\n",
+        "        self.normalize = normalize\n",
+        "\n",
+        "    def load_and_preprocess(self, audio_path, max_duration=30):\n",
+        "        \"\"\"Load and preprocess audio file\"\"\"\n",
+        "        try:\n",
+        "            # Load audio\n",
+        "            audio, sr = librosa.load(audio_path, sr=None)\n",
+        "\n",
+        "            # Resample to target sample rate\n",
+        "            if sr != self.target_sr:\n",
+        "                audio = librosa.resample(audio, orig_sr=sr, target_sr=self.target_sr)\n",
+        "\n",
+        "            # Convert to mono if stereo\n",
+        "            if audio.ndim > 1:\n",
+        "                audio = librosa.to_mono(audio)\n",
+        "\n",
+        "            # Limit duration\n",
+        "            if len(audio) > max_duration * self.target_sr:\n",
+        "                audio = audio[:max_duration * self.target_sr]\n",
+        "\n",
+        "            # Normalize amplitude\n",
+        "            if self.normalize:\n",
+        "                audio = librosa.util.normalize(audio)\n",
+        "\n",
+        "            # Remove silence\n",
+        "            audio = self.remove_silence(audio)\n",
+        "\n",
+        "            return audio, self.target_sr\n",
+        "\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error processing {audio_path}: {e}\")\n",
+        "            return None, None\n",
+        "\n",
+        "    def remove_silence(self, audio, threshold=0.01):\n",
+        "        \"\"\"Remove silence from audio based on amplitude threshold\"\"\"\n",
+        "        # Find non-silent segments\n",
+        "        non_silent = np.abs(audio) > threshold\n",
+        "\n",
+        "        if np.any(non_silent):\n",
+        "            # Find start and end of non-silent regions\n",
+        "            start = np.where(non_silent)[0][0]\n",
+        "            end = np.where(non_silent)[0][-1]\n",
+        "            return audio[start:end+1]\n",
+        "        else:\n",
+        "            return audio\n",
+        "\n",
+        "    def check_audio_quality(self, audio, sr):\n",
+        "        \"\"\"Check audio quality and return statistics\"\"\"\n",
+        "        if audio is None or len(audio) == 0:\n",
+        "            return None\n",
+        "\n",
+        "        return {\n",
+        "            'duration': len(audio) / sr,\n",
+        "            'mean_amplitude': np.mean(np.abs(audio)),\n",
+        "            'max_amplitude': np.max(np.abs(audio)),\n",
+        "            'snr': self.calculate_snr(audio),\n",
+        "            'is_corrupted': len(audio) < 0.1 * sr  # Less than 0.1 seconds\n",
+        "        }\n",
+        "\n",
+        "    def calculate_snr(self, audio):\n",
+        "        \"\"\"Calculate Signal-to-Noise Ratio\"\"\"\n",
+        "        try:\n",
+        "            # Simple SNR calculation\n",
+        "            signal_power = np.mean(audio**2)\n",
+        "            noise_power = np.var(audio)\n",
+        "            snr = 10 * np.log10(signal_power / noise_power) if noise_power > 0 else float('inf')\n",
+        "            return snr\n",
+        "        except:\n",
+        "            return 0.0\n",
+        "\n",
+        "def align_with_segmentation(audio_path, seg_path, sr=16000):\n",
+        "    \"\"\"Align audio with segmentation data from CSV\"\"\"\n",
+        "    try:\n",
+        "        # Load segmentation data\n",
+        "        seg_df = pd.read_csv(seg_path)\n",
+        "\n",
+        "        # Load audio\n",
+        "        audio, _ = librosa.load(audio_path, sr=sr)\n",
+        "\n",
+        "        # Extract segments based on CSV\n",
+        "        segments = []\n",
+        "        for _, row in seg_df.iterrows():\n",
+        "            start_time = row.get('start_time', 0)\n",
+        "            end_time = row.get('end_time', len(audio)/sr)\n",
+        "\n",
+        "            start_sample = int(start_time * sr)\n",
+        "            end_sample = int(end_time * sr)\n",
+        "\n",
+        "            if start_sample < len(audio) and end_sample <= len(audio):\n",
+        "                segment = audio[start_sample:end_sample]\n",
+        "                segments.append({\n",
+        "                    'audio': segment,\n",
+        "                    'start_time': start_time,\n",
+        "                    'end_time': end_time,\n",
+        "                    'duration': end_time - start_time\n",
+        "                })\n",
+        "\n",
+        "        return segments\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error aligning {audio_path} with {seg_path}: {e}\")\n",
+        "        return []\n",
+        "\n",
+        "# Process all audio files\n",
+        "def preprocess_all_audio():\n",
+        "    \"\"\"Preprocess all audio files in the dataset\"\"\"\n",
+        "    print(\"Starting audio preprocessing...\")\n",
+        "\n",
+        "    preprocessor = AudioPreprocessor()\n",
+        "    metadata_df = pd.read_csv(f\"{BASE_PATH}/metadata.csv\")\n",
+        "\n",
+        "    processed_data = []\n",
+        "    corrupted_files = []\n",
+        "\n",
+        "    for idx, row in metadata_df.iterrows():\n",
+        "        audio_path = row['audio_path']\n",
+        "        seg_path = row['seg_path']\n",
+        "\n",
+        "        # Preprocess audio\n",
+        "        audio, sr = preprocessor.load_and_preprocess(audio_path)\n",
+        "\n",
+        "        if audio is not None:\n",
+        "            # Check quality\n",
+        "            quality = preprocessor.check_audio_quality(audio, sr)\n",
+        "\n",
+        "            if not quality['is_corrupted']:\n",
+        "                # Align with segmentation\n",
+        "                segments = align_with_segmentation(audio_path, seg_path, sr)\n",
+        "\n",
+        "                processed_data.append({\n",
+        "                    'file_id': row['file_id'],\n",
+        "                    'audio': audio,\n",
+        "                    'sr': sr,\n",
+        "                    'segments': segments,\n",
+        "                    'quality': quality,\n",
+        "                    'label': row['label'],\n",
+        "                    'split': row['split']\n",
+        "                })\n",
+        "            else:\n",
+        "                corrupted_files.append(row['file_id'])\n",
+        "        else:\n",
+        "            corrupted_files.append(row['file_id'])\n",
+        "\n",
+        "    print(f\"Processed {len(processed_data)} files successfully\")\n",
+        "    print(f\"Found {len(corrupted_files)} corrupted files\")\n",
+        "\n",
+        "    return processed_data, corrupted_files"
+      ],
+      "metadata": {
+        "id": "Zs4Xakn5h-3p"
+      },
+      "execution_count": 4,
+      "outputs": []
     }
   ]
 }
