--- a/July16_Speech_CompleteV.ipynb
+++ b/July16_Speech_CompleteV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPTA98zZClunT+dzj8wSrJ2",
+      "authorship_tag": "ABX9TyMgkiyTsI2bcOk25jeI3p+l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -853,6 +853,98 @@
         "id": "Zs4Xakn5h-3p"
       },
       "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ============================================================================\n",
+        "# STEP 4: TRANSCRIPT GENERATION\n",
+        "# ============================================================================\n",
+        "\n",
+        "class TranscriptGenerator:\n",
+        "    def __init__(self, model_name=\"base\"):\n",
+        "        self.model = whisper.load_model(model_name)\n",
+        "\n",
+        "    def transcribe_audio(self, audio_path):\n",
+        "        \"\"\"Transcribe audio to text using Whisper\"\"\"\n",
+        "        try:\n",
+        "            result = self.model.transcribe(audio_path)\n",
+        "            return {\n",
+        "                'text': result['text'],\n",
+        "                'segments': result['segments'],\n",
+        "                'language': result['language']\n",
+        "            }\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error transcribing {audio_path}: {e}\")\n",
+        "            return None\n",
+        "\n",
+        "    def clean_transcript(self, text):\n",
+        "        \"\"\"Clean transcript text\"\"\"\n",
+        "        # Remove filler words\n",
+        "        fillers = ['um', 'uh', 'ah', 'er', 'like', 'you know', 'well']\n",
+        "        for filler in fillers:\n",
+        "            text = re.sub(f'\\\\b{filler}\\\\b', '', text, flags=re.IGNORECASE)\n",
+        "\n",
+        "        # Fix punctuation\n",
+        "        text = re.sub(r'\\s+', ' ', text)  # Multiple spaces to single\n",
+        "        text = re.sub(r'\\.+', '.', text)  # Multiple periods to single\n",
+        "        text = text.strip()\n",
+        "\n",
+        "        return text\n",
+        "\n",
+        "def generate_all_transcripts():\n",
+        "    \"\"\"Generate transcripts for all audio files\"\"\"\n",
+        "    print(\"Starting transcript generation...\")\n",
+        "\n",
+        "    generator = TranscriptGenerator()\n",
+        "    metadata_df = pd.read_csv(f\"{BASE_PATH}/metadata.csv\")\n",
+        "\n",
+        "    transcript_data = []\n",
+        "\n",
+        "    for idx, row in metadata_df.iterrows():\n",
+        "        audio_path = row['audio_path']\n",
+        "        file_id = row['file_id']\n",
+        "        label = row['label']\n",
+        "        split = row['split']\n",
+        "\n",
+        "        # Generate transcript\n",
+        "        result = generator.transcribe_audio(audio_path)\n",
+        "\n",
+        "        if result:\n",
+        "            # Clean transcript\n",
+        "            cleaned_text = generator.clean_transcript(result['text'])\n",
+        "\n",
+        "            # Save transcript\n",
+        "            if split == 'train':\n",
+        "                transcript_path = f\"{PATHS['transcripts']}/train/{label}/{file_id}.txt\"\n",
+        "            else:\n",
+        "                transcript_path = f\"{PATHS['transcripts']}/test-dist/{file_id}.txt\"\n",
+        "\n",
+        "            with open(transcript_path, 'w', encoding='utf-8') as f:\n",
+        "                f.write(cleaned_text)\n",
+        "\n",
+        "            transcript_data.append({\n",
+        "                'file_id': file_id,\n",
+        "                'transcript_path': transcript_path,\n",
+        "                'text': cleaned_text,\n",
+        "                'segments': result['segments'],\n",
+        "                'language': result['language'],\n",
+        "                'label': label,\n",
+        "                'split': split\n",
+        "            })\n",
+        "\n",
+        "    # Save transcript metadata\n",
+        "    transcript_df = pd.DataFrame(transcript_data)\n",
+        "    transcript_df.to_csv(f\"{BASE_PATH}/transcript_metadata.csv\", index=False)\n",
+        "\n",
+        "    print(f\"Generated {len(transcript_data)} transcripts\")\n",
+        "    return transcript_df\n"
+      ],
+      "metadata": {
+        "id": "5SEIgLjSitTv"
+      },
+      "execution_count": 5,
       "outputs": []
     }
   ]
