# STEP 7: POST-PREPROCESSING EDA

--- a/July16_Speech_CompleteV.ipynb
+++ b/July16_Speech_CompleteV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMgkiyTsI2bcOk25jeI3p+l",
+      "authorship_tag": "ABX9TyPe8zZL1ZS/ysuWKWff+O0z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -945,6 +945,330 @@
         "id": "5SEIgLjSitTv"
       },
       "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ============================================================================\n",
+        "# STEP 5: DEEPER EDA\n",
+        "# ============================================================================\n",
+        "\n",
+        "class DeeperEDA:\n",
+        "    def __init__(self, processed_data, transcript_df):\n",
+        "        self.processed_data = processed_data\n",
+        "        self.transcript_df = transcript_df\n",
+        "        self.nlp = spacy.load(\"en_core_web_sm\")\n",
+        "\n",
+        "    def audio_eda(self):\n",
+        "        \"\"\"Perform deeper audio EDA\"\"\"\n",
+        "        print(\"Performing deeper audio EDA...\")\n",
+        "\n",
+        "        # Extract advanced features\n",
+        "        audio_features = []\n",
+        "        for data in self.processed_data:\n",
+        "            audio = data['audio']\n",
+        "            sr = data['sr']\n",
+        "\n",
+        "            # MFCCs\n",
+        "            mfccs = librosa.feature.mfcc(y=audio, sr=sr, n_mfcc=13)\n",
+        "            mfcc_delta = librosa.feature.delta(mfccs)\n",
+        "            mfcc_delta2 = librosa.feature.delta(mfccs, order=2)\n",
+        "\n",
+        "            # Spectral features\n",
+        "            spectral_centroids = librosa.feature.spectral_centroid(y=audio, sr=sr)\n",
+        "            spectral_rolloff = librosa.feature.spectral_rolloff(y=audio, sr=sr)\n",
+        "            spectral_bandwidth = librosa.feature.spectral_bandwidth(y=audio, sr=sr)\n",
+        "\n",
+        "            # Zero crossing rate\n",
+        "            zcr = librosa.feature.zero_crossing_rate(audio)\n",
+        "\n",
+        "            # Short-time energy\n",
+        "            energy = np.array([sum(abs(audio[i:i+int(sr*0.025)])**2)\n",
+        "                             for i in range(0, len(audio), int(sr*0.01))])\n",
+        "\n",
+        "            features = {\n",
+        "                'file_id': data['file_id'],\n",
+        "                'mfcc_mean': np.mean(mfccs, axis=1),\n",
+        "                'mfcc_std': np.std(mfccs, axis=1),\n",
+        "                'mfcc_delta_mean': np.mean(mfcc_delta, axis=1),\n",
+        "                'mfcc_delta2_mean': np.mean(mfcc_delta2, axis=1),\n",
+        "                'spectral_centroid_mean': np.mean(spectral_centroids),\n",
+        "                'spectral_rolloff_mean': np.mean(spectral_rolloff),\n",
+        "                'spectral_bandwidth_mean': np.mean(spectral_bandwidth),\n",
+        "                'zcr_mean': np.mean(zcr),\n",
+        "                'energy_mean': np.mean(energy),\n",
+        "                'energy_std': np.std(energy),\n",
+        "                'label': data['label'],\n",
+        "                'split': data['split']\n",
+        "            }\n",
+        "\n",
+        "            audio_features.append(features)\n",
+        "\n",
+        "        return pd.DataFrame(audio_features)\n",
+        "\n",
+        "    def text_eda(self):\n",
+        "        \"\"\"Perform text EDA\"\"\"\n",
+        "        print(\"Performing text EDA...\")\n",
+        "\n",
+        "        text_features = []\n",
+        "\n",
+        "        for _, row in self.transcript_df.iterrows():\n",
+        "            text = row['text']\n",
+        "            doc = self.nlp(text)\n",
+        "\n",
+        "            # Basic stats\n",
+        "            words = text.split()\n",
+        "            sentences = text.split('.')\n",
+        "\n",
+        "            # POS tags\n",
+        "            pos_counts = Counter([token.pos_ for token in doc])\n",
+        "\n",
+        "            # Named entities\n",
+        "            entities = [(ent.text, ent.label_) for ent in doc.ents]\n",
+        "\n",
+        "            # Complexity metrics\n",
+        "            flesch_score = textstat.flesch_reading_ease(text)\n",
+        "            flesch_kincaid = textstat.flesch_kincaid_grade(text)\n",
+        "\n",
+        "            features = {\n",
+        "                'file_id': row['file_id'],\n",
+        "                'word_count': len(words),\n",
+        "                'sentence_count': len(sentences),\n",
+        "                'avg_sentence_length': len(words) / len(sentences) if sentences else 0,\n",
+        "                'vocabulary_size': len(set(words)),\n",
+        "                'noun_count': pos_counts.get('NOUN', 0),\n",
+        "                'verb_count': pos_counts.get('VERB', 0),\n",
+        "                'adj_count': pos_counts.get('ADJ', 0),\n",
+        "                'entity_count': len(entities),\n",
+        "                'flesch_score': flesch_score,\n",
+        "                'flesch_kincaid': flesch_kincaid,\n",
+        "                'label': row['label'],\n",
+        "                'split': row['split']\n",
+        "            }\n",
+        "\n",
+        "            text_features.append(features)\n",
+        "\n",
+        "        return pd.DataFrame(text_features)\n",
+        "\n",
+        "    def create_visualizations(self, audio_features_df, text_features_df):\n",
+        "        \"\"\"Create comprehensive visualizations\"\"\"\n",
+        "        print(\"Creating visualizations...\")\n",
+        "\n",
+        "        # Audio feature distributions\n",
+        "        fig, axes = plt.subplots(2, 3, figsize=(18, 12))\n",
+        "        axes = axes.flatten()\n",
+        "\n",
+        "        audio_cols = ['spectral_centroid_mean', 'spectral_rolloff_mean',\n",
+        "                     'spectral_bandwidth_mean', 'zcr_mean', 'energy_mean']\n",
+        "\n",
+        "        for i, col in enumerate(audio_cols):\n",
+        "            if col in audio_features_df.columns:\n",
+        "                for label in ['ad', 'cn']:\n",
+        "                    data = audio_features_df[audio_features_df['label'] == label][col]\n",
+        "                    axes[i].hist(data, alpha=0.7, label=label, bins=15)\n",
+        "                axes[i].set_title(f'{col}')\n",
+        "                axes[i].legend()\n",
+        "\n",
+        "        plt.tight_layout()\n",
+        "        plt.savefig(f\"{PATHS['visualizations']}/deeper_audio_features.png\", dpi=150)\n",
+        "        plt.show()\n",
+        "\n",
+        "        # Text feature distributions\n",
+        "        fig, axes = plt.subplots(2, 3, figsize=(18, 12))\n",
+        "        axes = axes.flatten()\n",
+        "\n",
+        "        text_cols = ['word_count', 'sentence_count', 'vocabulary_size',\n",
+        "                    'flesch_score', 'entity_count']\n",
+        "\n",
+        "        for i, col in enumerate(text_cols):\n",
+        "            if col in text_features_df.columns:\n",
+        "                for label in ['ad', 'cn']:\n",
+        "                    data = text_features_df[text_features_df['label'] == label][col]\n",
+        "                    axes[i].hist(data, alpha=0.7, label=label, bins=15)\n",
+        "                axes[i].set_title(f'{col}')\n",
+        "                axes[i].legend()\n",
+        "\n",
+        "        plt.tight_layout()\n",
+        "        plt.savefig(f\"{PATHS['visualizations']}/text_features.png\", dpi=150)\n",
+        "        plt.show()\n",
+        "\n",
+        "        # Word clouds\n",
+        "        self.create_word_clouds()\n",
+        "\n",
+        "    def create_word_clouds(self):\n",
+        "        \"\"\"Create word clouds for AD and CN classes\"\"\"\n",
+        "        ad_texts = ' '.join(self.transcript_df[self.transcript_df['label'] == 'ad']['text'])\n",
+        "        cn_texts = ' '.join(self.transcript_df[self.transcript_df['label'] == 'cn']['text'])\n",
+        "\n",
+        "        fig, axes = plt.subplots(1, 2, figsize=(15, 7))\n",
+        "\n",
+        "        # AD word cloud\n",
+        "        wordcloud_ad = WordCloud(width=800, height=400, background_color='white').generate(ad_texts)\n",
+        "        axes[0].imshow(wordcloud_ad, interpolation='bilinear')\n",
+        "        axes[0].set_title('AD Word Cloud')\n",
+        "        axes[0].axis('off')\n",
+        "\n",
+        "        # CN word cloud\n",
+        "        wordcloud_cn = WordCloud(width=800, height=400, background_color='white').generate(cn_texts)\n",
+        "        axes[1].imshow(wordcloud_cn, interpolation='bilinear')\n",
+        "        axes[1].set_title('CN Word Cloud')\n",
+        "        axes[1].axis('off')\n",
+        "\n",
+        "        plt.tight_layout()\n",
+        "        plt.savefig(f\"{PATHS['visualizations']}/word_clouds.png\", dpi=150)\n",
+        "        plt.show()"
+      ],
+      "metadata": {
+        "id": "nNfUBH3bi7x0"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ============================================================================\n",
+        "# STEP 6: FULL PREPROCESSING\n",
+        "# ============================================================================\n",
+        "\n",
+        "class FullPreprocessor:\n",
+        "    def __init__(self, target_sr=16000):\n",
+        "        self.target_sr = target_sr\n",
+        "        self.scaler = StandardScaler()\n",
+        "\n",
+        "    def extract_visual_features(self, audio, sr):\n",
+        "        \"\"\"Extract features for Vision Transformer\"\"\"\n",
+        "        # Mel-spectrogram\n",
+        "        mel_spec = librosa.feature.melspectrogram(\n",
+        "            y=audio, sr=sr, n_mels=128, fmax=8000,\n",
+        "            n_fft=1024, hop_length=256\n",
+        "        )\n",
+        "        mel_spec_db = librosa.power_to_db(mel_spec, ref=np.max)\n",
+        "\n",
+        "        # Resize to 224x224 for ViT\n",
+        "        mel_spec_resized = self.resize_spectrogram(mel_spec_db, (224, 224))\n",
+        "\n",
+        "        # MFCCs and derivatives\n",
+        "        mfccs = librosa.feature.mfcc(y=audio, sr=sr, n_mfcc=13)\n",
+        "        mfcc_delta = librosa.feature.delta(mfccs)\n",
+        "        mfcc_delta2 = librosa.feature.delta(mfccs, order=2)\n",
+        "\n",
+        "        # Additional features\n",
+        "        spectral_centroid = librosa.feature.spectral_centroid(y=audio, sr=sr)\n",
+        "        spectral_rolloff = librosa.feature.spectral_rolloff(y=audio, sr=sr)\n",
+        "        zcr = librosa.feature.zero_crossing_rate(audio)\n",
+        "\n",
+        "        return {\n",
+        "            'mel_spectrogram': mel_spec_resized,\n",
+        "            'mfccs': mfccs,\n",
+        "            'mfcc_delta': mfcc_delta,\n",
+        "            'mfcc_delta2': mfcc_delta2,\n",
+        "            'spectral_centroid': spectral_centroid,\n",
+        "            'spectral_rolloff': spectral_rolloff,\n",
+        "            'zcr': zcr\n",
+        "        }\n",
+        "\n",
+        "    def resize_spectrogram(self, spec, target_size):\n",
+        "        \"\"\"Resize spectrogram to target size\"\"\"\n",
+        "        from scipy.ndimage import zoom\n",
+        "\n",
+        "        zoom_factors = (target_size[0] / spec.shape[0], target_size[1] / spec.shape[1])\n",
+        "        resized_spec = zoom(spec, zoom_factors, order=1)\n",
+        "\n",
+        "        return resized_spec\n",
+        "\n",
+        "    def augment_audio(self, audio, sr):\n",
+        "        \"\"\"Apply audio augmentation\"\"\"\n",
+        "        augmented = []\n",
+        "\n",
+        "        # Original\n",
+        "        augmented.append(audio)\n",
+        "\n",
+        "        # Add noise\n",
+        "        noise_factor = 0.01\n",
+        "        noise = np.random.normal(0, noise_factor, audio.shape)\n",
+        "        augmented.append(audio + noise)\n",
+        "\n",
+        "        # Pitch shift\n",
+        "        pitch_shifted = librosa.effects.pitch_shift(audio, sr=sr, n_steps=2)\n",
+        "        augmented.append(pitch_shifted)\n",
+        "\n",
+        "        # Time stretch\n",
+        "        time_stretched = librosa.effects.time_stretch(audio, rate=1.1)\n",
+        "        augmented.append(time_stretched)\n",
+        "\n",
+        "        return augmented\n",
+        "\n",
+        "class TextPreprocessor:\n",
+        "    def __init__(self, model_name=\"bert-base-uncased\", max_length=512):\n",
+        "        self.tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+        "        self.max_length = max_length\n",
+        "\n",
+        "    def preprocess_text(self, text):\n",
+        "        \"\"\"Preprocess text for BERT\"\"\"\n",
+        "        # Tokenize\n",
+        "        encoding = self.tokenizer(\n",
+        "            text,\n",
+        "            truncation=True,\n",
+        "            padding='max_length',\n",
+        "            max_length=self.max_length,\n",
+        "            return_tensors='pt'\n",
+        "        )\n",
+        "\n",
+        "        return {\n",
+        "            'input_ids': encoding['input_ids'].squeeze(),\n",
+        "            'attention_mask': encoding['attention_mask'].squeeze()\n",
+        "        }\n",
+        "\n",
+        "    def augment_text(self, text):\n",
+        "        \"\"\"Simple text augmentation\"\"\"\n",
+        "        augmented = [text]\n",
+        "\n",
+        "        # Synonym replacement (simplified)\n",
+        "        words = text.split()\n",
+        "        if len(words) > 5:\n",
+        "            # Random word replacement (placeholder for more sophisticated augmentation)\n",
+        "            augmented.append(text)\n",
+        "\n",
+        "        return augmented"
+      ],
+      "metadata": {
+        "id": "mDjifiATjD8z"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ============================================================================\n",
+        "# STEP 7: POST-PREPROCESSING EDA\n",
+        "# ============================================================================\n",
+        "\n",
+        "def post_preprocessing_eda(processed_features):\n",
+        "    \"\"\"Perform EDA after preprocessing\"\"\"\n",
+        "    print(\"Performing post-preprocessing EDA...\")\n",
+        "\n",
+        "    # Analyze mel-spectrogram distributions\n",
+        "    mel_specs = [f['mel_spectrogram'] for f in processed_features]\n",
+        "\n",
+        "    # Plot sample spectrograms\n",
+        "    fig, axes = plt.subplots(2, 3, figsize=(15, 10))\n",
+        "\n",
+        "    for i, (spec, label) in enumerate(zip(mel_specs[:6], ['AD', 'CN']*3)):\n",
+        "        row, col = i // 3, i % 3\n",
+        "        axes[row, col].imshow(spec, aspect='auto', origin='lower')\n",
+        "        axes[row, col].set_title(f'{label} Mel-Spectrogram')\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig(f\"{PATHS['visualizations']}/post_preprocessing_spectrograms.png\", dpi=150)\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "q7OecFQpi-b5"
+      },
+      "execution_count": 9,
       "outputs": []
     }
   ]
