--- a/July16_Speech_CompleteV.ipynb
+++ b/July16_Speech_CompleteV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPe8zZL1ZS/ysuWKWff+O0z",
+      "authorship_tag": "ABX9TyOUEMilvOudxNOtUcFtkTao",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1269,6 +1269,215 @@
         "id": "q7OecFQpi-b5"
       },
       "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# ============================================================================\n",
+        "# STEP 8: TWO-BRANCH MODEL DEVELOPMENT\n",
+        "# ============================================================================\n",
+        "\n",
+        "class GraphAttention(nn.Module):\n",
+        "    def __init__(self, in_features, out_features, dropout=0.1):\n",
+        "        super().__init__()\n",
+        "        self.in_features = in_features\n",
+        "        self.out_features = out_features\n",
+        "\n",
+        "        self.W = nn.Parameter(torch.zeros(in_features, out_features))\n",
+        "        self.a = nn.Parameter(torch.zeros(2 * out_features, 1))\n",
+        "        self.dropout = nn.Dropout(dropout)\n",
+        "        self.leakyrelu = nn.LeakyReLU(0.2)\n",
+        "\n",
+        "        self.reset_parameters()\n",
+        "\n",
+        "    def reset_parameters(self):\n",
+        "        nn.init.xavier_uniform_(self.W.data)\n",
+        "        nn.init.xavier_uniform_(self.a.data)\n",
+        "\n",
+        "    def forward(self, h, adj):\n",
+        "        Wh = torch.mm(h, self.W)\n",
+        "        e = self._prepare_attentional_mechanism_input(Wh)\n",
+        "\n",
+        "        zero_vec = -9e15 * torch.ones_like(e)\n",
+        "        attention = torch.where(adj > 0, e, zero_vec)\n",
+        "        attention = F.softmax(attention, dim=1)\n",
+        "        attention = self.dropout(attention)\n",
+        "\n",
+        "        h_prime = torch.matmul(attention, Wh)\n",
+        "\n",
+        "        return h_prime\n",
+        "\n",
+        "    def _prepare_attentional_mechanism_input(self, Wh):\n",
+        "        N = Wh.size()[0]\n",
+        "        Wh_repeated_in_chunks = Wh.repeat_interleave(N, dim=0)\n",
+        "        Wh_repeated_alternating = Wh.repeat(N, 1)\n",
+        "\n",
+        "        all_combinations_matrix = torch.cat([Wh_repeated_in_chunks, Wh_repeated_alternating], dim=1)\n",
+        "\n",
+        "        return self.leakyrelu(torch.mm(all_combinations_matrix, self.a).view(N, N))\n",
+        "\n",
+        "class TextBranch(nn.Module):\n",
+        "    def __init__(self, model_name=\"bert-base-uncased\", hidden_size=768, num_classes=2):\n",
+        "        super().__init__()\n",
+        "        self.bert = AutoModel.from_pretrained(model_name)\n",
+        "        self.dropout = nn.Dropout(0.1)\n",
+        "        self.classifier = nn.Linear(hidden_size, num_classes)\n",
+        "\n",
+        "    def forward(self, input_ids, attention_mask):\n",
+        "        outputs = self.bert(input_ids=input_ids, attention_mask=attention_mask)\n",
+        "        pooled_output = outputs.pooler_output\n",
+        "        pooled_output = self.dropout(pooled_output)\n",
+        "        logits = self.classifier(pooled_output)\n",
+        "        return logits, pooled_output\n",
+        "\n",
+        "class AudioBranch(nn.Module):\n",
+        "    def __init__(self, num_classes=2, patch_size=16, embed_dim=768):\n",
+        "        super().__init__()\n",
+        "        self.patch_size = patch_size\n",
+        "        self.embed_dim = embed_dim\n",
+        "\n",
+        "        # Patch embedding\n",
+        "        self.patch_embed = nn.Conv2d(1, embed_dim, kernel_size=patch_size, stride=patch_size)\n",
+        "\n",
+        "        # Positional embedding\n",
+        "        self.pos_embed = nn.Parameter(torch.randn(1, 196, embed_dim))  # 14x14 patches\n",
+        "\n",
+        "        # Transformer blocks\n",
+        "        self.transformer = nn.TransformerEncoder(\n",
+        "            nn.TransformerEncoderLayer(\n",
+        "                d_model=embed_dim,\n",
+        "                nhead=12,\n",
+        "                dim_feedforward=3072,\n",
+        "                dropout=0.1\n",
+        "            ),\n",
+        "            num_layers=12\n",
+        "        )\n",
+        "\n",
+        "        # Graph attention\n",
+        "        self.graph_attention = GraphAttention(embed_dim, embed_dim)\n",
+        "\n",
+        "        # Classification head\n",
+        "        self.classifier = nn.Linear(embed_dim, num_classes)\n",
+        "\n",
+        "    def forward(self, x, adj_matrix=None):\n",
+        "        # Patch embedding\n",
+        "        x = self.patch_embed(x)  # (B, embed_dim, 14, 14)\n",
+        "        x = x.flatten(2).transpose(1, 2)  # (B, 196, embed_dim)\n",
+        "\n",
+        "        # Add positional embedding\n",
+        "        x = x + self.pos_embed\n",
+        "\n",
+        "        # Transformer\n",
+        "        x = self.transformer(x)\n",
+        "\n",
+        "        # Graph attention (if adjacency matrix provided)\n",
+        "        if adj_matrix is not None:\n",
+        "            x = self.graph_attention(x.mean(dim=0), adj_matrix)\n",
+        "        else:\n",
+        "            x = x.mean(dim=1)  # Global average pooling\n",
+        "\n",
+        "        # Classification\n",
+        "        logits = self.classifier(x)\n",
+        "\n",
+        "        return logits, x\n",
+        "\n",
+        "class TwoBranchModel(nn.Module):\n",
+        "    def __init__(self, text_model_name=\"bert-base-uncased\", num_classes=2):\n",
+        "        super().__init__()\n",
+        "        self.text_branch = TextBranch(text_model_name, num_classes=num_classes)\n",
+        "        self.audio_branch = AudioBranch(num_classes=num_classes)\n",
+        "\n",
+        "        # Fusion layer\n",
+        "        self.fusion = nn.Linear(768 * 2, 768)\n",
+        "        self.final_classifier = nn.Linear(768, num_classes)\n",
+        "\n",
+        "    def forward(self, text_input, audio_input, adj_matrix=None):\n",
+        "        # Text branch\n",
+        "        text_logits, text_features = self.text_branch(\n",
+        "            text_input['input_ids'],\n",
+        "            text_input['attention_mask']\n",
+        "        )\n",
+        "\n",
+        "        # Audio branch\n",
+        "        audio_logits, audio_features = self.audio_branch(audio_input, adj_matrix)\n",
+        "\n",
+        "        # Fusion\n",
+        "        combined_features = torch.cat([text_features, audio_features], dim=1)\n",
+        "        fused_features = self.fusion(combined_features)\n",
+        "        final_logits = self.final_classifier(fused_features)\n",
+        "\n",
+        "        return {\n",
+        "            'final_logits': final_logits,\n",
+        "            'text_logits': text_logits,\n",
+        "            'audio_logits': audio_logits,\n",
+        "            'text_features': text_features,\n",
+        "            'audio_features': audio_features\n",
+        "        }\n",
+        "\n",
+        "# Dataset class\n",
+        "class ADReSSoDataset(Dataset):\n",
+        "    def __init__(self, audio_features, text_features, labels, adj_matrices=None):\n",
+        "        self.audio_features = audio_features\n",
+        "        self.text_features = text_features\n",
+        "        self.labels = labels\n",
+        "        self.adj_matrices = adj_matrices\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(self.labels)\n",
+        "\n",
+        "    def __getitem__(self, idx):\n",
+        "        item = {\n",
+        "            'audio': torch.FloatTensor(self.audio_features[idx]).unsqueeze(0),\n",
+        "            'text': {\n",
+        "                'input_ids': self.text_features[idx]['input_ids'],\n",
+        "                'attention_mask': self.text_features[idx]['attention_mask']\n",
+        "            },\n",
+        "            'label': torch.LongTensor([self.labels[idx]])\n",
+        "        }\n",
+        "\n",
+        "        if self.adj_matrices is not None:\n",
+        "            item['adj_matrix'] = torch.FloatTensor(self.adj_matrices[idx])\n",
+        "\n",
+        "        return item\n",
+        "\n",
+        "# Training function\n",
+        "def train_model(model, train_loader, val_loader, num_epochs=10, device='cuda'):\n",
+        "    model.to(device)\n",
+        "\n",
+        "    optimizer = torch.optim.AdamW(model.parameters(), lr=2e-5)\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "    best_val_acc = 0\n",
+        "    patience = 3\n",
+        "    patience_counter = 0\n",
+        "\n",
+        "    for epoch in range(num_epochs):\n",
+        "        # Training\n",
+        "        model.train()\n",
+        "        train_loss = 0\n",
+        "        for batch in train_loader:\n",
+        "            audio = batch['audio'].to(device)\n",
+        "            text = {\n",
+        "                'input_ids': batch['text']['input_ids'].to(device),\n",
+        "                'attention_mask': batch['text']['attention_mask'].to(device)\n",
+        "            }\n",
+        "            labels = batch['label'].squeeze().to(device)\n",
+        "            adj_matrix = batch.get('adj_matrix', None)\n",
+        "            if adj_matrix is not None:\n",
+        "                adj_matrix = adj_matrix.to(device)\n",
+        "\n",
+        "            optimizer.zero_grad()\n",
+        "\n",
+        "            outputs = model(text, audio, adj_matrix)\n",
+        "            loss = criterion(outputs['"
+      ],
+      "metadata": {
+        "id": "6SNLFyJijfBg"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
